--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,12 +12,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    # Step 1: Check out the repository
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    # Step 2: Install C++ compiler
+    - name: Install C++ compiler
+      run: sudo apt-get update && sudo apt-get install -y g++
+
+    # Step 3: Compile the C++ code
+    - name: Compile C++ program
+      run: g++ -o program main.cpp
+
+    # Step 4: Run the compiled program
+    - name: Run the program
+      run: ./program
